src/objects/DF_DuplicationAnalysis__c.object
<CustomObject>
    <fields>
        <fullName>DF_ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>DF_DuplicationAnalysis</relationshipLabel>
        <relationshipName>DF_DuplicationAnalysis1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PVKeyCount__c</fullName>
        <label>PVKeyCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVKey__c</fullName>
        <label>PVKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DF_DuplicationAnalysis</label>
    <nameField>
        <label>DF_DuplicationAnalysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DF_DuplicationAnalysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>